--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 *.egg
 # MANIFEST
 .vscode/
+tmp/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
